# poetry-demo

./: pyproject.toml  setup.py
app/: bye.py  hi.py
tests/: tester.py
