[tool.poetry]
name = "poetry-demo"
version = "0.1.0"
description = ""
authors = ["Sarah <vanwars@gmail.com>"]
readme = "README.md"
packages = [
    { include = "app" }
]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
